--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>Demo 1 - enumerateDevices()</h1>
+    <h1>Demo 2 - ondevicechange</h1>
 
     <table id="device-list">
       <thead>
@@ -59,5 +59,7 @@
   };
 
   refreshDevices()
+
+  navigator.mediaDevices.addEventListener('devicechange', refreshDevices)
   </script>
 </html>
